@startuml

class Libro {
    - titolo : String
    - autore : String
    - isbn : String
    - annoPubblicazione : int
    - numeroCopie : int 
    + getTitolo() : String
    + getAutore() : String
    + getIsbn() : String
    + getAnnoPubblicazone() : int
    + getNumeroCopie() : int
    + setTitolo(String)
    + setAutore(String)
    + setIsbn(String)
    + setAnnoPubblicazione(int)
    + setNumeroCopie(int)
}

class Utente {
    - nome : String
    - cognome : String
    - matricola : String
    - attivo : boolean
    - email : String
    + getNome() : String
    + getCognome() : String
    + getMatricola() : String
    + getEmail() : String
    + isAttivo() : boolean
    + setNome(String)
    + setCognome(String)
    + setMatricola(String)
    + setEmail(String)
    + setAttivo(boolean)
}

class Prestito {
    - isbnLibro : String
    - matricolaUtente : String
    - dataRestituzione : LocalDate
    + getMatricolaUtente() : String
    + getIsbnLibro() : String
    + getDataRestituzione(): Date
    + setMatricolaUtente(String)
    + setIsbnLibro(String)
    + setDataRestituzione(Date)
    
}

'REPOSITORY come interfacce
class LibroRepository <<interface>>
class UtenteRepository <<interface>>
class PrestitoRepository <<interface>>

class InMemoriaLibroRepository
class InMemoriaUtenteRepository
class InMemoriaPrestitoRepository

' Relazioni di realizzazione (implementazione)
InMemoriaLibroRepository --|> LibroRepository
InMemoriaUtenteRepository --|> UtenteRepository
InMemoriaPrestitoRepository --|> PrestitoRepository

' SERVIZI
class ServiziGestioneLibro
class ServiziGestioneUtenti
class ServiziPrestiti
class ServiziArchivio

' BIBLIOTECA
class Biblioteca {
  - libri : List
  - utenti : List
  - prestiti : List
 
  - libroRepository
  - utenteRepository
  - prestitoRepository
  
  - libriService
  - utentiService
  - prestitiService
  - archivioService
 
  + getLibriService()
  + getUtentiService()
  + getPrestitiService()
  + getArchivioService()
}

' RELAZIONI (compatibili)
Biblioteca "1" -- "*" Libro
Biblioteca "1" -- "*" Utente
Biblioteca "1" -- "*" Prestito

' Composizione Biblioteca -> repository e servizi
Biblioteca *-- LibroRepository
Biblioteca *-- UtenteRepository
Biblioteca *-- PrestitoRepository

Biblioteca *-- ServiziGestioneLibro
Biblioteca *-- ServiziGestioneUtenti
Biblioteca *-- ServiziPrestiti
Biblioteca *-- ServiziArchivio

' Dipendenze servizi -> repository
ServiziGestioneLibro ..> LibroRepository
ServiziGestioneUtenti ..> UtenteRepository
ServiziPrestiti ..> PrestitoRepository
ServiziPrestiti ..> LibroRepository
ServiziPrestiti ..> UtenteRepository
ServiziArchivio ..> LibroRepository
ServiziArchivio ..> UtenteRepository
ServiziArchivio ..> PrestitoRepository

' Relazione indiretta Prestito -> Libro/Utente (annotazione)
Prestito ..> Libro : tramite ISBN
Prestito ..> Utente : tramite Matricola

@enduml
